# rs03-robstride-driver

./: .gitignore  ACTUAL_RESULTS.md  AGENT_SUMMARY.md  FINAL_TROUBLESHOOT.md  FIX_CANABLE.md  HARDWARE_CHECK.md  LAST_CHANCE.md  LETS_GO.sh  NO_VENV_SETUP.md  NUCLEAR_OPTION.sh  QUICK_FIX.sh  QUICK_REFERENCE.md  README.md  SETUP_COMMANDS.md  SETUP_NOW.sh  TASK_COMPLETION_SUMMARY.md  VERIFY_HARDWARE.md  WHAT_TO_EXPECT.md  aggressive_scan.py  basic_check.sh  debug_hardware.py  latency_report.json  pyproject.toml  quick_check.sh  quick_tests.py  raw_test.py  requirements.txt  restart_clean.sh  run_validation_suite.sh  simple_test.sh  test_motor_now.py  test_report_example.md  test_ros2_integration.sh  test_standalone.py  try_500k.sh  wake_motor.sh
.cursor/plans/: robstride-rs03-can-setup-7b9c1609.plan.md
docs/: LESSONS_LEARNED.md  README.md  SAFETY_AUDIT.md  calibration.md  connection_diagram.md  cpp_migration_plan.md  ros2_wrapper_architecture.md  safety.md  test_plan.md  wiki_reference.md
examples/: first_motion.py  hardware_validation.py  latency_measurement.py  multi_motor_incremental.py  multi_motor_mit.py  operation_control.py  raw_control.py  read_params.py  safety_utils.py  scan_motors.py  torque_test.py  trajectory_following.py  velocity_jog.py
logs/: session_notes.md
rs03_driver/: CMakeLists.txt  INTEGRATION.md  README.md  ROS2_INTEGRATION_GUIDE.md  package.xml
rs03_driver/config/: rs03_multi_params.yaml  rs03_params.yaml
rs03_driver/launch/: rs03.launch.py  rs03_multi.launch.py
rs03_driver/msg/: MotorCommand.msg  MotorStatus.msg
rs03_driver/rs03_driver/: __init__.py  sdk_interface.py
rs03_driver/scripts/: actuator_node.py  multi_motor_commander.py  test_velocity_sweep.py
scripts/: can_down.sh  can_up.sh
udev/: 99-ch340-can.rules
